--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -14,8 +14,8 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   = #027be3
-$secondary = #26A69A
+$primary   = #455a64
+$secondary = #ff6e40
 $tertiary  = #555
 
 $neutral   = #E0E1E2
